--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 	<link rel="stylesheet" href="~/Asset/css/style.css">
 
-	<link rel="stylesheet" href="~/Asset/css/dashbord_navitaion.css">
+	@*<link rel="stylesheet" href="~/Asset/css/dashbord_navitaion.css">*@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	@*DataTable*@
 	<link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
@@ -318,36 +318,32 @@
 	</div>
 	<!-- Wrapper End -->
 
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	@*<script src="~/Asset/js/jquery.min.js"></script>*@
+	@*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
 	<script src="~/Asset/js/jquery-3.6.0.js"></script>
 	<script src="~/Asset/js/jquery-migrate-3.0.0.min.js"></script>
 	<script src="~/Asset/js/popper.min.js"></script>
 	<script src="~/Asset/js/bootstrap.min.js"></script>
 	<script src="~/Asset/js/jquery.mmenu.all.js"></script>
 	<script src="~/Asset/js/ace-responsive-menu.js"></script>
-	<script src="~/Asset/js/isotop.js"></script>
-	<script src="~/Asset/js/snackbar.min.js"></script>
-	<script src="~/Asset/js/simplebar.js"></script>
-	<script src="~/Asset/js/parallax.js"></script>
-	<script src="~/Asset/js/scrollto.js"></script>
-	<script src="~/Asset/js/jquery-scrolltofixed-min.js"></script>
-	<script src="~/Asset/js/jquery.counterup.js"></script>
-	<script src="~/Asset/js/wow.min.js"></script>
-	<script src="~/Asset/js/progressbar.js"></script>
+	@*<script src="~/Asset/js/isotop.js"></script>*@
+	@*<script src="~/Asset/js/snackbar.min.js"></script>*@
+	@*<script src="~/Asset/js/simplebar.js"></script>*@
+	@*<script src="~/Asset/js/parallax.js"></script>*@
+	@*<script src="~/Asset/js/scrollto.js"></script>*@
+	@*<script src="~/Asset/js/jquery-scrolltofixed-min.js"></script>*@
+	@*<script src="~/Asset/js/jquery.counterup.js"></script>*@
+	@*<script src="~/Asset/js/wow.min.js"></script>*@
+	@*<script src="~/Asset/js/progressbar.js"></script>*@
 	<script src="~/Asset/js/slider.js"></script>
-	<script src="~/Asset/js/timepicker.js"></script>
-	<script src="~/Asset/js/wow.min.js"></script>
+	@*<script src="~/Asset/js/timepicker.js"></script>*@
+	@*<script src="~/Asset/js/wow.min.js"></script>*@
 	<!-- Custom script for all pages -->
 	<script src="~/Asset/js/script.js"></script>
 	@*<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>*@
 	<script src="https://cdn.tiny.cloud/1/t0cc6iw0zgyf2cce0nwq9yqftiwgrw6obfqmb1b45t650dfj/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 	<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
 
 	@await RenderSectionAsync("Scripts", required: false)
 
